# buying-a-house

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml  report.html
.claude/skills/: architecture-decisions.md  score-zillow-listing.md  zillow-images.md  zillow-search.md
.github/workflows/: deploy-pages.yml
data/: taste.json
data/houses/: 1024-webster-st-santa-cruz-ca-95062-20260109103228.json  1122-seabright-ave-santa-cruz-ca-95062-20260109103228.json  120-corinne-ave-santa-cruz-ca-95065-20260109140000.json  120-maple-st-santa-cruz-ca-95060-20260109103228.json  1239-la-madrona-dr-santa-cruz-ca-95060-20260109113325.json  1308-yarmouth-ter-sunnyvale-ca-94087-20260109113326.json  135-belmont-st-santa-cruz-ca-95060-20260110190247.json  136-market-st-santa-cruz-ca-95060-20260109103228.json  1430-merrill-st-santa-cruz-ca-95062-20260109140000.json  1612-escalona-dr-santa-cruz-ca-95060-20260109103228.json  1707-n-rodeo-gulch-rd-soquel-ca-95073-20260109113326.json  17855-kiowa-trl-los-gatos-ca-95033-20260108214632.json  206-sunnyside-ave-campbell-ca-95008-20260109113326.json  21130-e-cliff-dr-santa-cruz-ca-95062-20260109103228.json  21565-old-mine-rd-los-gatos-ca-95033-20260110190247.json  2200-pelican-crst-santa-cruz-ca-95062-20260109140000.json  2241-albert-ln-capitola-ca-95010-20260108214504.json  2304-mattison-ln-santa-cruz-ca-95062-20260108230000.json  23416-sunset-dr-los-gatos-ca-95033-20260109113325.json  23489-hutchinson-rd-los-gatos-ca-95033-20260109113326.json  (+21 more)
docs/ard/: 000-ard-template.md  (+9 more)
src/: __init__.py  cli.py  report.py
(+19 files in other folders)
